load model utama "Sahabat-AI/gemma2-9b-cpt-sahabatai-v1-base"

--- a/Notebook_LLM_CHAT_A_PelukMuka.ipynb
+++ b/Notebook_LLM_CHAT_A_PelukMuka.ipynb
@@ -2,35 +2,250 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "44e5f9fd",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 5,
+   "id": "9994a751",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m59.1/59.1 MB\u001b[0m \u001b[31m44.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25h"
+     ]
     }
-   },
+   ],
+   "source": [
+    "!pip -q install -U \"transformers>=4.44\" accelerate peft safetensors\n",
+    "!pip -q install -U bitsandbytes\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "44e5f9fd",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import json\n",
-    "import numpy as np\n",
-    "from tqdm import tqdm\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "import torch\n",
-    "from torch.nn import functional as F\n",
-    "from torch.utils.data import DataLoader\n",
+    "from transformers import AutoTokenizer, AutoModelForCausalLM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "50a64961",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.12/dist-packages/huggingface_hub/utils/_auth.py:104: UserWarning: \n",
+      "Error while fetching `HF_TOKEN` secret value from your vault: 'Requesting secret HF_TOKEN timed out. Secrets can only be fetched when running from the Colab UI.'.\n",
+      "You are not authenticated with the Hugging Face Hub in this notebook.\n",
+      "If the error persists, please let us know by opening an issue on GitHub (https://github.com/huggingface/huggingface_hub/issues/new).\n",
+      "  warnings.warn(\n",
+      "`torch_dtype` is deprecated! Use `dtype` instead!\n",
+      "The `load_in_4bit` and `load_in_8bit` arguments are deprecated and will be removed in the future versions. Please, pass a `BitsAndBytesConfig` object in `quantization_config` argument instead.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a9d0af09e37b46b0894bd01ad1a2708b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors.index.json: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5a2fb60d3a664fb18dc51391c7268bbb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Fetching 4 files:   0%|          | 0/4 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8341fb9efc194c1e97e5d9e766871f77",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00001-of-00004.safetensors:   0%|          | 0.00/4.90G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bdafb4bc3ace4b44b2513fc26e56ad4a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00002-of-00004.safetensors:   0%|          | 0.00/4.95G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cf589eacdd594975824df91984332f65",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00003-of-00004.safetensors:   0%|          | 0.00/4.96G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1fd9b01b202643b78f1e3e435d4495b7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00004-of-00004.safetensors:   0%|          | 0.00/3.67G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The following generation flags are not valid and may be ignored: ['cache_implementation']. Set `TRANSFORMERS_VERBOSITY=info` for more details.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9ffb89cfefa4425fbfc2032685106af5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/4 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2cd4fbe5ba8940679bc8927c9e95efdc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "generation_config.json:   0%|          | 0.00/168 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model & tokenizer loaded!\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_id = \"Sahabat-AI/gemma2-9b-cpt-sahabatai-v1-base\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\n",
+    "    model_id,\n",
+    "    trust_remote_code=True\n",
+    ")\n",
     "\n",
-    "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
-    "from datasets import load_dataset\n",
-    "from peft import LoraConfig, get_peft_model\n",
-    "from lion_pytorch import Lion"
+    "model = AutoModelForCausalLM.from_pretrained(\n",
+    "    model_id,\n",
+    "    device_map=\"auto\",\n",
+    "    torch_dtype=torch.float16,\n",
+    "    load_in_4bit=True,\n",
+    "    trust_remote_code=True\n",
+    ")\n",
+    "\n",
+    "print(\"Model & tokenizer loaded!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9eb47a66",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Apa itu Program Tanpa Tes di UAJY?\n",
+      "\n",
+      "Program Tanpa Tes di UAJY adalah program yang memungkinkan calon mahasiswa untuk masuk ke UAJY tanpa harus mengikuti tes masuk. Program ini sangat cocok bagi mereka yang ingin masuk ke UAJY tanpa harus melalui proses tes yang panjang dan melelahkan.\n",
+      "\n",
+      "Bagaimana Cara Mendaftar Program Tanpa Tes di UAJY?\n",
+      "\n",
+      "Untuk mendaftar Program Tanpa Tes di UAJY, calon mahasiswa harus memenuhi beberapa persyaratan yang telah ditentukan oleh pihak UAJY.\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = \"Apa itu Program Tanpa Tes di UAJY?\"\n",
+    "\n",
+    "inputs = tokenizer(prompt, return_tensors=\"pt\").to(model.device)\n",
+    "\n",
+    "outputs = model.generate(\n",
+    "    **inputs,\n",
+    "    max_new_tokens=100\n",
+    ")\n",
+    "\n",
+    "print(tokenizer.decode(outputs[0], skip_special_tokens=True))"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
